# Electric-Simulation-Library

./: .gitignore  CMakeLists.txt  README.md  library.cpp
cmake/: ElectricConfig.cmake.in
include/electric/: Circut.h  electric_types.h
src/: Circut.cpp
